--- a/package.json
+++ b/package.json
@@ -2,19 +2,38 @@
   "name": "lotsofdots_frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://satuhyva.github.io/lotsofdots_frontend",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "expo": "^37.0.12",
+    "expo-cli": "^3.21.3",
+    "g": "^2.0.1",
+    "gh-pages": "^3.0.0",
     "react": "^16.13.1",
+    "react-art": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-native": "^0.62.2",
+    "react-native-web": "^0.12.3",
     "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-web": "react-scripts start",
+    "build-web": "react-scripts build",
+    "test-web": "react-scripts test",
+    "eject-web": "react-scripts eject",
+    "predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
+    "start-native": "expo start",
+    "android": "expo android",
+    "ios": "expo ios",
+    "build:ios": "expo build:ios",
+    "build:android": "expo build:android"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +49,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-jsx-source": "^6.22.0",
+    "babel-preset-expo": "^8.2.1"
   }
 }
