--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "expo": {
       "sdkVersion": "31.0.0",
-      "name": "lotsofdots",
+      "name": "Lots of Dots",
       "slug": "lotsofdots",
       "version": "0.1.0",
       "description": "An application for dot voting",
